Documentation edits made through Mintlify web editor

--- a/index-mdx.mdx
+++ b/index-mdx.mdx
@@ -1,19 +1,27 @@
 ---
-description: "We're a cozy mix of product people, GTM strategists, and tech lovers. Whether you're just starting out or you've already built and sold a company, we come together monthly and quarterly to dive deep into product, GTM, and growth. No egos, just good conversations."
-title: "Kolkata Startup Chapter"
+title: "index.mdx"
 ---
 
+## Welcome to Kolkata Startup Chapter
 
-### Within the community, you'll find
+We're a cozy mix of product people, GTM strategists, and tech lovers. Whether you're just starting out or you've already built and sold a company, we come together monthly and quarterly to dive deep into product, GTM, and growth. No egos, just good conversations.
+
+### **Within the community, you'll find**
 
 - Supercool folks working in product, growth and AI
 - Everyone from early career professionals to founders coming together to discuss all the cool things happening around the world and how we can learn, grow, and implement them.
 - Building enthusiasts! Whether it's internal tools, automations, or end-to-end apps, we're always sharing insights from our day-to-day learnings and the cool tools we keep creating
 
-### Where it all began
+### **Where it all began**
 
 One fine evening in the middle of the City of Joy (Kolkata), we all met at a Lenny's Newsletter meetup and absolutely hit it off. The vibes were so good that we decided to make this a monthly thing. Here are some moments from how we met each other!
 
-![Frame1(4) 1](/images/Frame1\(4\)-1.png)
+<img
+  src="/Frame14.png"
+  alt="Frame14"
+  title="Frame14"
+  className="mx-auto"
+  style={{ width:"99%" }}
+/>
 
-P.S. Want to sponsor the meetups? Email [kolkatastartupchapter@gmail.com](mailto:kolkatastartupchapter@gmail.com) to learn more.
+P.S. Want to sponsor the meetups? Email [<u>kolkatastartupchapter@gmail.com</u>](mailto:kolkatastartupchapter@gmail.com) to learn more.
