--- a/index.mdx
+++ b/index.mdx
@@ -1,10 +1,7 @@
 ---
-title: "index.mdx"
+title: "Welcome to Kolkata Startup Chapter"
+description: "We're a cozy mix of product people, GTM strategists, and tech lovers. Whether you're just starting out or you've already built and sold a company, we come together monthly and quarterly to dive deep into product, GTM, and growth. No egos, just good conversations."
 ---
-
-## Welcome to Kolkata Startup Chapter
-
-We're a cozy mix of product people, GTM strategists, and tech lovers. Whether you're just starting out or you've already built and sold a company, we come together monthly and quarterly to dive deep into product, GTM, and growth. No egos, just good conversations.
 
 ### **Within the community, you'll find**
 
